# ddns-gandi

./: Cargo.toml  LICENSE  README.md
src/: main.rs
